syntax = "proto3";

option csharp_namespace = "Test.GrpcServer.Provider";

package TestGrpcServer;

service GrpcValidationProvider {
	rpc Login(LoginRequest) returns (LoginResponse);
}

message LoginRequest{
	string Username=1;
	string Passwrod=2;
}

message LoginResponse {
	bool Result = 1;
	string AccessToken = 2;
}

